--- a/app/src/main/res/layout/cartlist_item.xml
+++ b/app/src/main/res/layout/cartlist_item.xml
@@ -39,6 +39,7 @@
                     android:ems="10"
                     android:textSize="15sp"
                     android:inputType="textPersonName"
+                    android:letterSpacing="-0.1"
                     android:text="보노보노" />
 
                 <ImageView
@@ -61,6 +62,7 @@
                 android:textSize="14sp"
                 android:textColor="#9A9A9A"
                 android:inputType="textPersonName"
+                android:letterSpacing="-0.1"
                 android:text="귀여운 보노보노" />
 
             <EditText
@@ -73,6 +75,7 @@
                 android:textSize="14sp"
                 android:textStyle="bold"
                 android:inputType="numberSigned"
+                android:letterSpacing="-0.1"
                 android:text="1,000" />
 
             <EditText
@@ -86,6 +89,7 @@
                 android:textSize="14sp"
                 android:inputType="textPersonName"
                 android:text="URL"
+                android:letterSpacing="-0.1"
                 android:visibility="gone"/>
        </LinearLayout>
 
