--- a/app/src/main/res/layout/fragment_main_mypage.xml
+++ b/app/src/main/res/layout/fragment_main_mypage.xml
@@ -12,6 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:text="내 정보"
+        android:letterSpacing="-0.1"
         android:textSize="16sp"
         android:textStyle="bold"/>
 
@@ -42,7 +43,8 @@
             android:layout_height="wrap_content"
             android:paddingVertical="3dp"
             android:paddingHorizontal="15dp"
-            android:text="내 옷장 ▶"
+            android:text="내 옷장   ▶"
+            android:letterSpacing="-0.1"
             android:textColor="@color/black"
             android:textSize="12sp"
             android:clickable="true"/>
@@ -63,6 +65,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="guest"
+        android:letterSpacing="-0.1"
         android:textSize="21dp"
         android:textStyle="bold"
         android:textColor="#000000"/>
@@ -76,6 +79,7 @@
         android:paddingHorizontal="15dp"
         android:layout_marginTop="10dp"
         android:text="프로필 수정"
+        android:letterSpacing="-0.1"
         android:textColor="@color/black"
         android:textSize="12sp"
         android:clickable="true"/>
@@ -100,7 +104,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="13sp"
-                android:text="    성별" />
+                android:letterSpacing="-0.1"
+                android:text="      성별" />
 
             <TextView
                 android:id="@+id/mypageGender"
@@ -109,6 +114,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:textSize="12sp"
+                android:letterSpacing="-0.1"
                 android:textColor="@color/black"
                 android:padding="5dp"
                 android:layout_weight="1"
@@ -126,7 +132,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="13sp"
-                android:text="    나이" />
+                android:letterSpacing="-0.1"
+                android:text="      나이" />
 
             <TextView
                 android:id="@+id/mypageAge"
@@ -135,6 +142,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:textSize="12sp"
+                android:letterSpacing="-0.1"
                 android:textColor="@color/black"
                 android:padding="5dp"
                 android:layout_weight="1"
@@ -152,7 +160,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="13sp"
-                android:text="        키" />
+                android:letterSpacing="-0.1"
+                android:text="            키" />
 
             <TextView
                 android:id="@+id/mypageHeight"
@@ -161,6 +170,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:textSize="12sp"
+                android:letterSpacing="-0.1"
                 android:textColor="@color/black"
                 android:padding="5dp"
                 android:layout_weight="1"
@@ -178,6 +188,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="13sp"
+                android:letterSpacing="-0.1"
                 android:text="몸무게" />
 
             <TextView
@@ -189,6 +200,7 @@
                 android:textSize="12sp"
                 android:textColor="@color/black"
                 android:padding="5dp"
+                android:letterSpacing="-0.1"
                 android:layout_weight="1"
                 android:hint="몸무게" />
         </LinearLayout>
