--- a/app/src/main/res/layout/fragment_user_withdrawal.xml
+++ b/app/src/main/res/layout/fragment_user_withdrawal.xml
@@ -13,6 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:text="회원 탈퇴"
+        android:letterSpacing="-0.1"
         android:textSize="16sp"
         android:textStyle="bold"/>
 
@@ -45,6 +46,7 @@
                 android:id="@+id/textView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:letterSpacing="-0.1"
                 android:text="     비밀번호"
                 android:textSize="13sp" />
 
@@ -60,6 +62,7 @@
                     android:background="@drawable/text_view_form"
                     android:inputType="textPassword"
                     android:padding="5dp"
+                    android:letterSpacing="-0.1"
                     android:text=""
                     android:textSize="12sp"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -110,6 +113,7 @@
             android:layout_marginTop="20dp"
             android:layout_gravity="center_horizontal"
             android:text="회원 탈퇴"
+            android:letterSpacing="-0.1"
             android:textColor="@color/black"
             android:clickable="true"/>
 
