--- a/app/src/main/res/layout/activity_find_pw.xml
+++ b/app/src/main/res/layout/activity_find_pw.xml
@@ -38,6 +38,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="비밀번호 찾기"
+                android:letterSpacing="-0.1"
                 android:textSize="20sp"/>
 
             <TextView
@@ -46,6 +47,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                 android:text="가입한 이메일로 찾기"
+                android:letterSpacing="-0.1"
                 android:textSize="12sp"/>
 
             <EditText
