--- a/app/src/main/res/layout/activity_social_sign_up.xml
+++ b/app/src/main/res/layout/activity_social_sign_up.xml
@@ -36,6 +36,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="신체정보"
+                android:letterSpacing="-0.1"
                 android:textSize="20sp"/>
 
             <TextView
@@ -44,6 +45,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:text="성별"
+                android:letterSpacing="-0.1"
                 android:textSize="12sp"/>
 
             <RadioGroup
@@ -59,6 +61,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginRight="5dp"
                     android:text="남성"
+                    android:letterSpacing="-0.1"
                     android:textSize="10sp"/>
 
                 <RadioButton
@@ -66,6 +69,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="여성"
+                    android:letterSpacing="-0.1"
                     android:textSize="10sp"/>
             </RadioGroup>
 
@@ -81,6 +85,7 @@
                 android:id="@+id/heightSpinner"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:letterSpacing="-0.1"
                 android:spinnerMode="dropdown"/>
 
             <TextView
@@ -89,6 +94,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:text="몸무게"
+                android:letterSpacing="-0.1"
                 android:textSize="12sp" />
 
             <androidx.appcompat.widget.AppCompatSpinner
