--- a/app/src/main/res/layout/closetlist_item.xml
+++ b/app/src/main/res/layout/closetlist_item.xml
@@ -39,6 +39,7 @@
                     android:ems="10"
                     android:textSize="15sp"
                     android:inputType="textPersonName"
+                    android:letterSpacing="-0.1"
                     android:text="보노보노" />
 
                 <ImageView
@@ -61,6 +62,7 @@
                 android:textSize="14sp"
                 android:textColor="#9A9A9A"
                 android:inputType="textPersonName"
+                android:letterSpacing="-0.1"
                 android:text="귀여운 보노보노" />
 
             <EditText
@@ -72,6 +74,7 @@
                 android:layout_marginTop="5dp"
                 android:textSize="14sp"
                 android:inputType="textPersonName"
+                android:letterSpacing="-0.1"
                 android:text="후드티" />
         </LinearLayout>
 
@@ -90,6 +93,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:visibility="gone"
             app:srcCompat="@drawable/update_btn" />
 
         <ImageView
