--- a/app/src/main/res/layout/fragment_change_pw.xml
+++ b/app/src/main/res/layout/fragment_change_pw.xml
@@ -13,6 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:text="비밀번호 변경"
+        android:letterSpacing="-0.1"
         android:textSize="16sp"
         android:textStyle="bold"/>
 
@@ -45,7 +46,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="13sp"
-                android:text="        이메일" />
+                android:letterSpacing="-0.1"
+                android:text="           이메일" />
 
             <EditText
                 android:id="@+id/emailForChangePw"
@@ -57,6 +59,7 @@
                 android:inputType="textEmailAddress"
                 android:padding="5dp"
                 android:text=""
+                android:letterSpacing="-0.1"
                 android:textSize="12sp" />
         </LinearLayout>
 
@@ -72,7 +75,8 @@
                 android:id="@+id/textView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="     비밀번호"
+                android:text="       비밀번호"
+                android:letterSpacing="-0.1"
                 android:textSize="13sp" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -88,6 +92,7 @@
                     android:inputType="textPassword"
                     android:padding="5dp"
                     android:text=""
+                    android:letterSpacing="-0.1"
                     android:textSize="12sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -137,6 +142,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="13sp"
+                android:letterSpacing="-0.1"
                 android:text="새 비밀번호" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -152,6 +158,7 @@
                     android:inputType="textPassword"
                     android:padding="5dp"
                     android:text=""
+                    android:letterSpacing="-0.1"
                     android:textSize="12sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -204,7 +211,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="13sp"
-                android:text="     휴대전화" />
+                android:letterSpacing="-0.1"
+                android:text="      휴대전화" />
 
             <EditText
                 android:id="@+id/phoneForChangePw"
@@ -215,6 +223,7 @@
                 android:background="@drawable/text_view_form"
                 android:inputType="phone"
                 android:padding="5dp"
+                android:letterSpacing="-0.1"
                 android:text=""
                 android:textSize="12sp" />
         </LinearLayout>
@@ -234,6 +243,7 @@
                 android:background="@drawable/verification_code_form"
                 android:ems="10"
                 android:hint="인증번호를 입력하세요"
+                android:letterSpacing="-0.1"
                 android:inputType="numberSigned"
                 android:padding="5dp"
                 android:textSize="13sp" />
@@ -247,6 +257,7 @@
                 android:layout_marginLeft="10dp"
                 android:paddingHorizontal="15dp"
                 android:text="인증번호 받기"
+                android:letterSpacing="-0.1"
                 android:textSize="10sp"
                 android:textColor="#4E4E4E"
                 android:clickable="true"/>
@@ -263,6 +274,7 @@
                 android:layout_marginTop="20dp"
                 android:layout_gravity="center_horizontal"
                 android:text="변경"
+                android:letterSpacing="-0.1"
                 android:textColor="@color/black"
                 android:clickable="true"/>
 
