--- a/app/src/main/res/layout/fragment_main_cart.xml
+++ b/app/src/main/res/layout/fragment_main_cart.xml
@@ -12,6 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:text="장바구니"
+        android:letterSpacing="-0.1"
         android:textSize="16sp"
         android:textStyle="bold"/>
 
@@ -58,87 +59,11 @@
             android:text="10000" />
     </LinearLayout>-->
 
-    <LinearLayout
-        android:id="@+id/addItem"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/box"
-        android:layout_marginTop="20dp"
-        android:paddingHorizontal="20dp"
-        android:visibility="gone">
-
-        <ImageView
-            android:id="@+id/imageView4"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginVertical="3dp"
-            android:layout_marginLeft="10dp"
-            android:layout_gravity="center_vertical"
-            app:srcCompat="@drawable/cart_img" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center_vertical"
-            android:orientation="vertical">
-
-            <EditText
-                android:id="@+id/addCartItemName"
-                android:background="@null"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:textSize="13sp"
-                android:inputType="textPersonName"
-                android:hint="Shop 이름" />
-
-            <EditText
-                android:id="@+id/addCartItemNote"
-                android:background="@null"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="3dp"
-                android:ems="10"
-                android:textSize="13sp"
-                android:inputType="textPersonName"
-                android:hint="설명" />
-
-            <EditText
-                android:id="@+id/addCartItemPrice"
-                android:background="@null"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:layout_marginTop="3dp"
-                android:textSize="13sp"
-                android:inputType="number"
-                android:hint="가격" />
-
-            <EditText
-                android:id="@+id/addCartItemUrl"
-                android:background="@null"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:layout_marginTop="2dp"
-                android:textSize="13sp"
-                android:inputType="textPersonName"
-                android:hint="URL" />
-
-        </LinearLayout>
-
-    </LinearLayout>
-
-    <FrameLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp">
-
         <LinearLayout
             android:id="@+id/defaultBtnGroup"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
             android:visibility="visible">
             <TextView
                 android:id="@+id/addBtn"
@@ -148,51 +73,9 @@
                 android:paddingVertical="5dp"
                 android:paddingHorizontal="30dp"
                 android:text="추가"
+                android:letterSpacing="-0.1"
                 android:textColor="@color/black"
                 android:clickable="true"/>
         </LinearLayout>
-
-        <!--<LinearLayout
-            android:id="@+id/selectItemBtnGroup"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:visibility="gone">
-            <TextView
-                android:id="@+id/itemUpdateBtn"
-                android:background="@drawable/btn_form"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingVertical="5dp"
-                android:paddingHorizontal="30dp"
-                android:text="변경"
-                android:textColor="@color/black"
-                android:clickable="true"/>
-
-            <TextView
-                android:id="@+id/itemDeleteBtn"
-                android:background="@drawable/btn_form"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingVertical="5dp"
-                android:paddingHorizontal="30dp"
-                android:layout_marginHorizontal="10dp"
-                android:text="삭제"
-                android:textColor="@color/black"
-                android:clickable="true"/>
-
-            <TextView
-                android:id="@+id/itemUrlBtn"
-                android:background="@drawable/btn_form"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingVertical="5dp"
-                android:paddingHorizontal="30dp"
-                android:text="사이트 이동"
-                android:textColor="@color/black"
-                android:clickable="true"/>
-        </LinearLayout>-->
-
-
-    </FrameLayout>
 
 </LinearLayout>
