--- a/app/src/main/res/layout/fragment_main_mypage_update.xml
+++ b/app/src/main/res/layout/fragment_main_mypage_update.xml
@@ -14,6 +14,7 @@
         android:layout_marginTop="30dp"
         android:text="내 정보"
         android:textSize="16sp"
+        android:letterSpacing="-0.1"
         android:textStyle="bold"/>
 
     <ImageView
@@ -27,7 +28,8 @@
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="임시" />
+        android:text="임시"
+        android:visibility="gone"/>
 
     <LinearLayout
         android:background="@drawable/my_info_form"
@@ -59,6 +61,7 @@
                 android:id="@+id/imageView15"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:visibility="gone"
                 app:layout_constraintBottom_toBottomOf="@+id/mypageUimg"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.9"
@@ -80,6 +83,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="13sp"
+                android:letterSpacing="-0.1"
                 android:text="이메일" />
 
             <EditText
@@ -89,6 +93,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:textSize="12sp"
+                android:letterSpacing="-0.1"
                 android:padding="5dp"
                 android:layout_weight="1"
                 android:inputType="textEmailAddress"
@@ -106,7 +111,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="13sp"
-                android:text="    이름" />
+                android:letterSpacing="-0.1"
+                android:text="      이름" />
 
             <EditText
                 android:id="@+id/updateName"
@@ -116,6 +122,7 @@
                 android:layout_marginLeft="10dp"
                 android:textSize="12sp"
                 android:padding="5dp"
+                android:letterSpacing="-0.1"
                 android:layout_weight="1"
                 android:inputType="textPersonName"
                 android:text="이름" />
@@ -132,7 +139,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="13sp"
-                android:text="    성별" />
+                android:letterSpacing="-0.1"
+                android:text="      성별" />
 
             <EditText
                 android:id="@+id/updateGender"
@@ -141,6 +149,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:textSize="12sp"
+                android:letterSpacing="-0.1"
                 android:padding="5dp"
                 android:layout_weight="1"
                 android:text="성별" />
@@ -157,7 +166,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="13sp"
-                android:text="    나이" />
+                android:letterSpacing="-0.1"
+                android:text="      나이" />
 
             <EditText
                 android:id="@+id/updateAge"
@@ -166,6 +176,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:textSize="12sp"
+                android:letterSpacing="-0.1"
                 android:padding="5dp"
                 android:layout_weight="1"
                 android:inputType="numberSigned"
@@ -183,7 +194,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="13sp"
-                android:text="        키" />
+                android:letterSpacing="-0.1"
+                android:text="           키" />
 
             <EditText
                 android:id="@+id/updateHeight"
@@ -192,6 +204,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:textSize="12sp"
+                android:letterSpacing="-0.1"
                 android:padding="5dp"
                 android:layout_weight="1"
                 android:inputType="numberSigned"
@@ -209,6 +222,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="13sp"
+                android:letterSpacing="-0.1"
                 android:text="몸무게" />
 
             <EditText
@@ -218,6 +232,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:textSize="12sp"
+                android:letterSpacing="-0.1"
                 android:padding="5dp"
                 android:layout_weight="1"
                 android:inputType="numberSigned"
@@ -240,6 +255,7 @@
                 android:paddingVertical="5dp"
                 android:paddingHorizontal="38dp"
                 android:text="변경"
+                android:letterSpacing="-0.1"
                 android:textColor="@color/black"
                 android:clickable="true"/>
 
@@ -253,6 +269,7 @@
                 android:paddingVertical="5dp"
                 android:paddingHorizontal="38dp"
                 android:text="취소"
+                android:letterSpacing="-0.1"
                 android:textColor="@color/black"
                 android:clickable="true"/>
 
