--- a/app/src/main/res/layout/fragment_mypage_mycloset.xml
+++ b/app/src/main/res/layout/fragment_mypage_mycloset.xml
@@ -12,6 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:text="내 옷장"
+        android:letterSpacing="-0.1"
         android:textSize="16sp"
         android:textStyle="bold"/>
 
@@ -61,6 +62,7 @@
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:textSize="13sp"
+                android:letterSpacing="-0.1"
                 android:inputType="textPersonName"
                 android:hint="옷 이름" />
 
@@ -72,6 +74,7 @@
                 android:layout_marginTop="3dp"
                 android:ems="10"
                 android:textSize="13sp"
+                android:letterSpacing="-0.1"
                 android:inputType="textPersonName"
                 android:hint="설명" />
 
@@ -83,6 +86,7 @@
                 android:ems="10"
                 android:layout_marginTop="2dp"
                 android:textSize="13sp"
+                android:letterSpacing="-0.1"
                 android:inputType="textPersonName"
                 android:hint="종류" />
 
@@ -98,6 +102,7 @@
                 android:paddingVertical="5dp"
                 android:paddingHorizontal="30dp"
                 android:text="추가"
+                android:letterSpacing="-0.1"
                 android:textColor="@color/black"
                 android:clickable="true"/>
 
