--- a/app/src/main/res/layout/fragment_mypage_settings.xml
+++ b/app/src/main/res/layout/fragment_mypage_settings.xml
@@ -14,6 +14,7 @@
         android:layout_marginTop="50dp"
         android:textStyle="bold"
         android:textColor="@color/black"
+        android:letterSpacing="-0.1"
         android:textSize="25sp"
         android:text="설정" />
 
@@ -22,6 +23,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
+        android:letterSpacing="-0.1"
         android:textSize="12sp"
         android:text="sns 연결 정보" />
 
@@ -36,6 +38,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/black"
+            android:letterSpacing="-0.1"
             android:textStyle="bold"
             android:textSize="13sp"
             android:text="카카오 계정" />
@@ -45,6 +48,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:letterSpacing="-0.1"
             android:gravity="right"
             android:text="비연결" />
 
@@ -61,6 +65,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/black"
+            android:letterSpacing="-0.1"
             android:textStyle="bold"
             android:textSize="13sp"
             android:text="구글 계정" />
@@ -70,6 +75,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:letterSpacing="-0.1"
             android:gravity="right"
             android:text="비연결" />
     </LinearLayout>
@@ -87,12 +93,14 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:textSize="12sp"
+        android:letterSpacing="-0.1"
         android:text="알림 설정" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
+        android:letterSpacing="-0.1"
         android:orientation="horizontal">
 
         <TextView
@@ -102,6 +110,7 @@
             android:layout_weight="1"
             android:textColor="@color/black"
             android:textStyle="bold"
+            android:letterSpacing="-0.1"
             android:textSize="13sp"
             android:text="이벤트 및 홍보용 알림" />
 
@@ -123,6 +132,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
+        android:letterSpacing="-0.1"
         android:textSize="12sp"
         android:text="기타 설정" />
 
@@ -132,6 +142,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:textColor="@color/black"
+        android:letterSpacing="-0.1"
         android:textStyle="bold"
         android:textSize="13sp"
         android:text="문의하기" />
@@ -142,6 +153,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:textColor="@color/black"
+        android:letterSpacing="-0.1"
         android:textStyle="bold"
         android:textSize="13sp"
         android:text="서비스 약관" />
@@ -152,6 +164,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:textColor="@color/black"
+        android:letterSpacing="-0.1"
         android:textStyle="bold"
         android:textSize="13sp"
         android:text="개인정보 보호약관" />
@@ -162,6 +175,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:textColor="@color/black"
+        android:letterSpacing="-0.1"
         android:textStyle="bold"
         android:textSize="13sp"
         android:text="비밀번호 변경" />
@@ -172,9 +186,10 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:textColor="@color/black"
+        android:letterSpacing="-0.1"
         android:textStyle="bold"
         android:textSize="13sp"
-        android:text="로그아웃" />
+        android:text="로그아웃 및 앱 종료" />
 
     <TextView
         android:id="@+id/withdrawalBtn"
@@ -182,6 +197,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:textColor="@color/black"
+        android:letterSpacing="-0.1"
         android:textStyle="bold"
         android:textSize="13sp"
         android:text="회원탈퇴" />
