--- a/app/src/main/res/layout/recommenlist_item.xml
+++ b/app/src/main/res/layout/recommenlist_item.xml
@@ -15,6 +15,7 @@
         android:layout_height="wrap_content"
         android:textStyle="bold"
         android:textColor="@color/black"
+        android:letterSpacing="-0.1"
         android:layout_marginRight="70dp"
         android:layout_gravity="center_vertical"
         android:text="1" />
@@ -42,5 +43,6 @@
         android:textStyle="bold"
         android:textColor="@color/black"
         android:layout_gravity="center_vertical"
+        android:letterSpacing="-0.1"
         android:text="비디알" />
 </LinearLayout>
