--- a/app/src/main/res/layout/fragment_main_model.xml
+++ b/app/src/main/res/layout/fragment_main_model.xml
@@ -62,7 +62,7 @@
             android:layout_height="wrap_content">
 
             <TextView
-                android:id="@+id/textView17"
+                android:id="@+id/mName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
