--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -62,6 +62,7 @@
         android:layout_height="match_parent">
 
         <LinearLayout
+            android:id="@+id/navBtn"
             android:layout_width="match_parent"
             android:layout_height="66dp"
             android:layout_gravity="bottom"
