--- a/app/src/main/res/layout/cartlist_item.xml
+++ b/app/src/main/res/layout/cartlist_item.xml
@@ -100,6 +100,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginBottom="5dp"
+        android:layout_marginHorizontal="50dp"
         android:visibility="gone">
 
 
@@ -108,6 +109,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:visibility="gone"
             app:srcCompat="@drawable/update_btn" />
 
         <ImageView
