--- a/app/src/main/res/layout/fragment_main_cart.xml
+++ b/app/src/main/res/layout/fragment_main_cart.xml
@@ -27,7 +27,18 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/cartRecyclerView"
         android:layout_width="match_parent"
-        android:layout_height="500dp"/>
+        android:layout_height="500dp"
+        android:visibility="visible"/>
+
+    <TextView
+        android:id="@+id/noCart"
+        android:layout_width="match_parent"
+        android:layout_height="500dp"
+        android:gravity="center"
+        android:textSize="25sp"
+        android:letterSpacing="-0.1"
+        android:text="장바구니를\n추가해 주세요"
+        android:visibility="gone" />
     <!-- 190 -->
 
     <!--<LinearLayout
