--- a/app/src/main/res/layout/fragment_mypage_mycloset.xml
+++ b/app/src/main/res/layout/fragment_mypage_mycloset.xml
@@ -27,83 +27,30 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/cRecyclerView"
         android:layout_width="match_parent"
-        android:layout_height="500dp"/>
+        android:layout_height="500dp"
+        android:visibility="visible" />
     <!-- 190 -->
 
-    <LinearLayout
-        android:id="@+id/addClosetItem"
+    <TextView
+        android:id="@+id/noCloset"
         android:layout_width="match_parent"
+        android:layout_height="500dp"
+        android:gravity="center"
+        android:textSize="25sp"
+        android:letterSpacing="-0.1"
+        android:text="옷장을\n추가해 주세요"
+        android:visibility="gone" />
+
+    <TextView
+        android:id="@+id/mAddBtn"
+        android:background="@drawable/btn_form"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/box"
-        android:paddingHorizontal="20dp"
+        android:paddingVertical="5dp"
+        android:paddingHorizontal="30dp"
         android:layout_marginTop="20dp"
-        android:visibility="gone">
-
-        <ImageView
-            android:id="@+id/addClosetItemImg"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginVertical="3dp"
-            android:layout_marginLeft="10dp"
-            android:layout_gravity="center_vertical"
-            app:srcCompat="@drawable/closet_img" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center_vertical"
-            android:orientation="vertical">
-
-            <EditText
-                android:id="@+id/addClosetItemName"
-                android:background="@null"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:textSize="13sp"
-                android:letterSpacing="-0.1"
-                android:inputType="textPersonName"
-                android:hint="옷 이름" />
-
-            <EditText
-                android:id="@+id/addClosetItemNote"
-                android:background="@null"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="3dp"
-                android:ems="10"
-                android:textSize="13sp"
-                android:letterSpacing="-0.1"
-                android:inputType="textPersonName"
-                android:hint="설명" />
-
-            <EditText
-                android:id="@+id/addClosetItemKind"
-                android:background="@null"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:layout_marginTop="2dp"
-                android:textSize="13sp"
-                android:letterSpacing="-0.1"
-                android:inputType="textPersonName"
-                android:hint="종류" />
-
-        </LinearLayout>
-
-    </LinearLayout>
-
-            <TextView
-                android:id="@+id/mAddBtn"
-                android:background="@drawable/btn_form"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingVertical="5dp"
-                android:paddingHorizontal="30dp"
-                android:text="추가"
-                android:letterSpacing="-0.1"
-                android:textColor="@color/black"
-                android:clickable="true"/>
-
+        android:text="추가"
+        android:letterSpacing="-0.1"
+        android:textColor="@color/black"
+        android:clickable="true"/>
 </LinearLayout>
